--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
     "start": "cross-env NODE_ENV=production nodemon backend/app.js"
   },
-  
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.7.2",
