--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "airlinereservationsystem": "file:..",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
   },
