--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "airlinereservationsystem": "file:..",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-datetime": "^3.2.0",
