--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.6",
+    "@mui/x-date-pickers": "^7.22.2",
     "airlinereservationsystem": "file:..",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-datetime": "^3.2.0",
