--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^8.7.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "uuid": "^11.0.3"
   },
   "type": "module",
   "devDependencies": {
