--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^7.5.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.3.1",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
