--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "airlinereservationsystem": "file:..",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "html2pdf.js": "^0.10.2",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-datetime": "^3.2.0",
