--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/react-chartjs": "^3.0.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.6",
     "@mui/x-date-pickers": "^7.22.2",
     "airlinereservationsystem": "file:..",
     "axios": "^1.7.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "dayjs": "^1.11.13",
     "html2pdf.js": "^0.10.2",
     "react": "^18.3.1",
