--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "dayjs": "^1.11.13",
     "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-datetime": "^3.2.0",
