--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "socket.io": "^4.8.1",
     "uuid": "^11.0.3"
   },
   "type": "module",
